# min_kamp

./: .aigenrc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .zshrc  README.md  conftest.py  docker-compose.yml  mypy.ini  packages.txt  pyproject.toml  pytest.ini  refaktorering_plan.md  requirements-cloud.txt  requirements.txt  setup.py  streamlit_app.py
.streamlit/: config.toml  lag.md  tropp.md
data/: kampdata.db
database/: kampdata.db
docs/: avhengigheter.md  system.md
scripts/: check_session_state.py  dupl_funksjoner.py  fix_linter.py  init_database.py  run_migrations.py  sjekk_avhengigheter.py  sjekk_bytteplan.py  sjekk_database.py  sjekk_sql_sporringer.py
src/: __init__.py  main.py
src/min_kamp/: __init__.py  main.py  test_bytter.py
src/min_kamp/config/: __init__.py  constants.py  logging_config.py  settings.py
src/min_kamp/core/: __init__.py  main.py  session_state.py
src/min_kamp/database/: __init__.py  base_handler.py  constants.py  db_config.py  db_handler.py  errors.py  schema.sql
src/min_kamp/database/auth/: __init__.py  auth_handler.py  auth_views.py
src/min_kamp/database/handlers/: __init__.py  app_handler.py  auth_db_handler.py  auth_handler.py  base_handler.py  bytteplan_handler.py  kamp_handler.py  spiller_handler.py  spilletid_handler.py  state_handler.py
src/min_kamp/database/migrations/: 001_initial_schema.sql  migrations_handler.py
src/min_kamp/database/queries/: lagrede_bytteplan_queries.sql
src/min_kamp/database/utils/: __init__.py  bytteplan_utils.py  logger_utils.py  schema_validator.py  session_state.py  spilletid_utils.py
src/min_kamp/db/: __init__.py  connection_pool.py  constants.py  db_config.py  db_handler.py  errors.py
src/min_kamp/db/auth/: __init__.py  auth_views.py
src/min_kamp/db/handlers/: __init__.py  app_handler.py  auth_handler.py  bytteplan_handler.py  kamp_handler.py  spiller_handler.py  (+1 more)
src/min_kamp/models/: __init__.py  bytteplan_model.py  kamp_model.py  spiller_model.py
src/min_kamp/pages/: __init__.py  auth_views.py  bytteplan_page.py  formation_page.py  kamp_page.py  kamptropp_page.py  login_page.py  oppsett_page.py  page_renderer.py  statistikk_page.py
src/min_kamp/utils/: __init__.py  bytteplan_validator.py  kamptropp.py  periode_utils.py  session_state.py  sidebar.py  streamlit_utils.py  validation.py
src/tests/: test_schema.py
(+21 files in other folders)
